# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

November 2, 2001
	pygame.time.get_ticks() returns 0 before pygame.init()

October 22, 2001
	small fix for filled ellipses/circles

September 27, 2001
	drawing filled circles returns bounding rect
	ellipses and circles drawn inside given area
	mixer init can take chunksize
	fix in clipped horizontal line drawing [BUG]

September 26, 2001
	key.set_repeat() raises exception error, smarter args

September 22, 2001
	added Rect.clamp_ip, for inplace clamping
	display.update(None) will update full screen

September 21, 2001
	Surface.convert() respects the SRCALPHA flag when passing depth


pygame-12
September 1, 2001
	fixed typo in pygame.cursor

Aug 30, 2001
	added VIDEOEXPOSE event

Aug 29, 2001
	changed initializations, to allow easier embedding

Aug 28, 2001
	added circle and rect convenciences to pygame.draw
	removed debug printing from draw.polygon

Aug 25, 2001
	added looping, scaling, and audio to for Movies

Aug 15, 2001
	added pygame.movie module with MPEG video playback

July 31, 2001
	fixed mixer.music refcount

July 26, 2001
	 custom events work with event.peek() and event.get()
	 added event.get_blocked() function to query blocked types

July 23, 2001
	music specifically halted when quitting (should not matter?)
	mixer.get_init() now returns the initialized playback format

July 21, 2001
	all events can be posted, not just USEREVENT
	subsurfaces inherit colorkey and alpha settings

Jul 20, 2001
	default font "finding" is smarter

Jul 17, 2001
	added polygon() and ellipse() to pygame.draw
	lines with width>2 are now correct (was one too small)

Jul 16, 2001
	can work with software surfaces before pygame.init()
	Surface.convert() now can take arguments like pygame.Surface()
	pygame.display.set_icon() sets the windowmanager icon

Jul 15, 2001